--- a/Page-3.html
+++ b/Page-3.html
@@ -27,7 +27,7 @@
     
 
 	<a href="index.html" class="home">
-  <img src="bilder/home.png" alt="Home" />
+  <img src="bilder/Home.jpg" alt="Home" />
 </a>
 	
 	
