--- a/Page-2.html
+++ b/Page-2.html
@@ -58,12 +58,12 @@
 	
    
 	<a href="index.html" class="home">
-  <img src="bilder/home.png" alt="Home" />
+  <img src="bilder/home.jpg" alt="Home" />
 </a>
 	
 	
 	<a href="#" class="back-to-top">
-	<img src="bilder/up.png" alt="Up" />
+	<img src="bilder/up.jpg" alt="Up" />
 	</a>
 	
 	
