--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="css/stylem.css">
 </head>
 <body>
-	
+		<div class="image-container">
+                <img src="bilder/Taiwan.jpg" alt="Main Image">
+                <div class="image-overlay">
     <header>
         <h1>Taiwan-China Konflikt</h1>
 		 
