--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 		<div class="image-container">
-                <img src="bilder/Taiwan.jpg" alt="Main Image">
+                <img src="bilder/taiwan.jpg" alt="Main Image">
                 <div class="image-overlay">
     <header>
         <h1>Taiwan-China Konflikt</h1>
