--- a/Page-4.html
+++ b/Page-4.html
@@ -24,7 +24,7 @@ Die Volksrepublik China verfolgt die sogenannte Ein-China-Politik, die Taiwan al
     </main>
     
 <a href="index.html" class="home">
-  <img src="bilder/home.png" alt="Home" />
+  <img src="bilder/Home.jpg" alt="Home" />
 </a>
     <footer>
         <p>&copy; 2024 Muhammad Zakiullah Zia</p>
