--- a/Page-5.html
+++ b/Page-5.html
@@ -23,7 +23,7 @@ China betrachtet die Wiedervereinigung mit Taiwan als vorrangiges nationales Zie
     </main>
     
 <a href="index.html" class="home">
-  <img src="bilder/home.png" alt="Home" />
+  <img src="bilder/Home.jpg" alt="Home" />
 </a>
     <footer>
         <p>&copy; 2024 Muhammad Zakiullah Zia</p>
