--- a/Page-6.html
+++ b/Page-6.html
@@ -22,7 +22,7 @@ Trotz politischer Spannungen sind China und Taiwan wirtschaftlich eng miteinande
     </main>
     
 <a href="index.html" class="home">
-  <img src="bilder/home.png" alt="Home" />
+  <img src="bilder/Home.jpg" alt="Home" />
 </a>
     <footer>
         <p>&copy; 2024 Muhammad Zakiullah Zia</p>
