--- a/Page-7.html
+++ b/Page-7.html
@@ -21,7 +21,7 @@ Die taiwanesische Bevölkerung hat in den letzten Jahrzehnten eine eigene nation
     </main>
     
 <a href="index.html" class="home">
-  <img src="bilder/home.png" alt="Home" />
+  <img src="bilder/Home.jpg" alt="Home" />
 </a>
     <footer>
         <p>&copy; 2024 Muhammad Zakiullah Zia</p>
